# flashcard-app

./: .gitignore
flashcard-be/: pyproject.toml
flashcard-be/app/: __init__.py  config.py  models.py  routes.py
flashcard-fe/: package-lock.json  package.json
flashcard-fe/public/: index.html
flashcard-fe/src/: App.js
flashcard-fe/src/Components/Category/: CategoryList.js
flashcard-fe/src/Components/Common/: Header.js
flashcard-fe/src/Services/: CategoryService.js
