[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["chawchitsuthwe <chawchitsu.thwe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
Flask-SQLAlchemy = "^3.0.3"
pymysql = "^1.0.3"
python-dotenv = "^1.0.0"
cryptography = "^40.0.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
